deploy: b71da613427f101e0cbbe7487ab9f0c6ed831376

--- a/components/ObjectComponent.html
+++ b/components/ObjectComponent.html
@@ -124,6 +124,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Component for managing and displaying objects within the Explorer.</p>
+
+    </p>
 
 
 
@@ -308,10 +315,16 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">lib/src/components/object/src/object.component.ts:92</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="102" class="link-to-prism">lib/src/components/object/src/object.component.ts:102</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                            <div class="io-description"><p>Sets up initial state and emits an event to update the dashboard header.</p>
+</div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -347,14 +360,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="111"
-                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:111</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="134"
+                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:134</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Filters the list of targets based on a search value.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -365,6 +380,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -379,6 +395,10 @@
                                             </td>
 
 
+                                            <td>
+                                                    <p>The list of targets to filter.</p>
+
+                                            </td>
                                         </tr>
                                         <tr>
                                                 <td>val</td>
@@ -391,16 +411,21 @@
                                             </td>
 
 
+                                            <td>
+                                                    <p>The search value.</p>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
                         <div class="io-description">
-                            <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                            <b>Returns : </b>        <code><a href="../interfaces/ExplorerTarget.html" target="_self" >ExplorerTarget[]</a></code>
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>The filtered list of targets.</p>
+
                             </div>
                 </td>
             </tr>
@@ -426,14 +451,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="98"
-                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:98</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="115"
+                                    class="link-to-prism">lib/src/components/object/src/object.component.ts:115</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Displays the details of a specific object in a dialog.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -444,6 +471,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -458,6 +486,10 @@
                                             </td>
 
 
+                                            <td>
+                                                    <p>The object to display.</p>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -504,7 +536,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/object/src/object.component.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/object/src/object.component.ts:69</a></div>
                         </td>
                     </tr>
 
@@ -531,7 +563,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/object/src/object.component.ts:64</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/object/src/object.component.ts:67</a></div>
                         </td>
                     </tr>
 
@@ -558,7 +590,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/object/src/object.component.ts:63</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/object/src/object.component.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -585,7 +617,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/object/src/object.component.ts:65</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/object/src/object.component.ts:68</a></div>
                         </td>
                     </tr>
 
@@ -612,7 +644,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/object/src/object.component.ts:61</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/object/src/object.component.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -657,10 +689,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/object/src/object.component.ts:69</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/components/object/src/object.component.ts:75</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Observable for the filtered list of targets.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -689,7 +727,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/object/src/object.component.ts:67</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">lib/src/components/object/src/object.component.ts:70</a></div>
                         </td>
                     </tr>
 
@@ -716,7 +754,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/object/src/object.component.ts:62</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/object/src/object.component.ts:65</a></div>
                         </td>
                     </tr>
 
@@ -745,9 +783,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="90" class="link-to-prism">lib/src/components/object/src/object.component.ts:90</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="100" class="link-to-prism">lib/src/components/object/src/object.component.ts:100</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the identifier for the preloader channel.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -776,6 +823,9 @@ import {Store} from &quot;../../../modules/store&quot;;
 import {DashboardEvent} from &quot;../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../modules/preloader/src/use-preloader&quot;;
 
+/**
+ * Component for managing and displaying objects within the Explorer.
+ */
 @Component({
   selector: &quot;object&quot;,
   standalone: true,
@@ -808,6 +858,9 @@ export class ObjectComponent {
   readonly ctrl: FormControl&lt;string&gt; &#x3D; new FormControl();
   private targetsCache: ExplorerTarget[] &#x3D; [];
 
+  /**
+   * Observable for the filtered list of targets.
+   */
   readonly targetList$ &#x3D; this.ctrl.valueChanges.pipe(
     startWith(&quot;&quot;),
     map(value &#x3D;&gt; value.trim().toLowerCase()),
@@ -829,14 +882,25 @@ export class ObjectComponent {
     })
   );
 
+  /**
+   * Gets the identifier for the preloader channel.
+   * @returns The preloader channel identifier.
+   */
   get preloaderChannel() {
     return Object.PreloaderCn;
   }
 
+  /**
+   * Sets up initial state and emits an event to update the dashboard header.
+   */
   constructor() {
     this.store.emit&lt;string&gt;(DashboardEvent.PatchHeader, this.ts.translate(&quot;object.title&quot;));
   }
 
+  /**
+   * Displays the details of a specific object in a dialog.
+   * @param item The object to display.
+   */
   showObjectDetails(item: ExplorerTarget) {
     import(&quot;./details/object-details.component&quot;).then(c &#x3D;&gt; {
       this.dialogService.open(c.ObjectDetailsComponent, {
@@ -850,7 +914,13 @@ export class ObjectComponent {
     });
   }
 
-  private findTarget(targetList: ExplorerTarget[], val: string) {
+  /**
+   * Filters the list of targets based on a search value.
+   * @param targetList The list of targets to filter.
+   * @param val The search value.
+   * @returns {ExplorerTarget[]} The filtered list of targets.
+   */
+  private findTarget(targetList: ExplorerTarget[], val: string): ExplorerTarget[] {
     if (!val) {
       return targetList;
     }
