--- a/components/ObjectDetailsColumnEditorComponent.html
+++ b/components/ObjectDetailsColumnEditorComponent.html
@@ -124,6 +124,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Component for editing the details of a column.</p>
+
+    </p>
 
 
 
@@ -307,14 +314,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="55"
-                                    class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:55</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="69"
+                                    class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:69</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Saves the column form and closes the dialog.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -344,14 +353,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="50"
-                                    class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:50</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="61"
+                                    class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:61</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Searches for column types based on user input.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -362,6 +373,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -376,6 +388,10 @@
                                             </td>
 
 
+                                            <td>
+                                                    <p>The auto-complete event containing the search query.</p>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -417,7 +433,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:44</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:47</a></div>
                         </td>
                     </tr>
 
@@ -444,7 +460,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:41</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -471,7 +487,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:42</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:46</a></div>
                         </td>
                     </tr>
 
@@ -502,10 +518,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:43</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:44</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>List of type suggestions for the auto-complete input.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -531,9 +553,22 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/components/object/src/details/column-editor/object-details-column-editor.component.ts:53</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the column form from the dialog configuration.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="../miscellaneous/typealiases.html#ColumnForm" target="_self" >FormGroup&lt;ColumnForm&gt;</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -557,6 +592,9 @@ import {RefInputComponent} from &quot;../../../../../modules/ref-input&quot;;
 import {ColumnForm} from &quot;../../object.types&quot;;
 import {Explorer, ExplorerService} from &quot;../../../../explorer&quot;;
 
+/**
+ * Component for editing the details of a column.
+ */
 @Component({
   selector: &quot;object-details-column-editor&quot;,
   standalone: true,
@@ -581,21 +619,32 @@ import {Explorer, ExplorerService} from &quot;../../../../explorer&quot;;
 })
 export class ObjectDetailsColumnEditorComponent {
 
-
+  /** List of type suggestions for the auto-complete input. **/
+  suggestions: string[] &#x3D; [];
   private readonly config &#x3D; inject(DynamicDialogConfig);
   private readonly ref &#x3D; inject(DynamicDialogRef);
-  suggestions: string[] &#x3D; [];
   private readonly cdr &#x3D; inject(ChangeDetectorRef);
 
-  get colForm() {
+  /**
+   * Gets the column form from the dialog configuration.
+   * @returns {FormGroup&lt;ColumnForm&gt;} The column form.
+   */
+  get colForm(): FormGroup&lt;ColumnForm&gt; {
     return this.config.data as FormGroup&lt;ColumnForm&gt;;
   }
 
+  /**
+   * Searches for column types based on user input.
+   * @param e The auto-complete event containing the search query.
+   */
   searchType(e: AutoCompleteCompleteEvent) {
     this.suggestions &#x3D; Explorer.Types.filter(s &#x3D;&gt; s.startsWith(e.query.trim()));
     this.cdr.markForCheck();
   }
 
+  /**
+   * Saves the column form and closes the dialog.
+   */
   save() {
     this.ref.close(this.colForm);
   }
